<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryView"
    android:background="@color/lightWhite">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">


            <ImageView
                android:id="@+id/back_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@drawable/backwardarrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="6dp"
                android:fontFamily="@font/bungee"
                android:text="@string/categories"
                android:textAllCaps="true"
                android:textSize="30sp" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            ></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/cat5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bungee"
                    android:padding="25dp"
                    android:text="@string/restaurants" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="View All" />


            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="-45dp"
                android:src="@drawable/resturant" />


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0000"
            android:layout_margin="20dp"
            app:cardElevation="8dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat2">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/llandmarks" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/bungee"
                    android:padding="25dp"
                    android:text="@string/landmarks" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="View All" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat3"
                android:layout_margin="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cafes"
                    android:fontFamily="@font/bungee"
                    android:padding="25dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/coffeecup"
                android:layout_marginTop="-10dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0000"
            android:layout_margin="20dp"
            app:cardElevation="8dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat4">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/shops"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shops"
                    android:fontFamily="@font/bungee"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>






            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/cat5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bungee"
                    android:padding="25dp"
                    android:text="@string/parks" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:text="View All" />


            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/parkk"
                android:layout_marginTop="-40dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0000"
            android:layout_margin="20dp"
            app:cardElevation="8dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat2">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/museum"
                    android:layout_marginLeft="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/museums"
                    android:fontFamily="@font/bungee"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>






            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat3"
                android:layout_margin="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leisure"
                    android:fontFamily="@font/bungee"
                    android:padding="25dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>


            </RelativeLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/popcorn"
                android:padding="10dp"
                android:layout_marginTop="-20dp"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#0000"
            android:layout_margin="20dp"
            app:cardElevation="8dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/cat4">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/bgg"
                    android:layout_marginLeft="20dp"
                    android:padding="-20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:fontFamily="@font/bungee"
                    android:layout_alignParentRight="true"
                    android:padding="25dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View All"
                    android:background="#00000000"
                    android:padding="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"/>






            </RelativeLayout>

        </androidx.cardview.widget.CardView>








    </LinearLayout>

</ScrollView>